algumas modificações, mas estou mais próximo de fechar

--- a/css/slides.css
+++ b/css/slides.css
@@ -256,3 +256,7 @@ img.slideImg {
 #johnResig {
     background: url(../img/johnResig.png) #fff center center scroll no-repeat;
 }
+
+#goodparts {
+    background: url(../img/goodparts.jpg) #fff center center scroll no-repeat;
+}
